k8s/base/log-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log
  template:
    metadata:
      labels:
        app: log
    spec:
      containers:
        - name: log
          image: localhost:5000/micro/log:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          readinessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 20
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 45
            periodSeconds: 10
