k8s/base/discovery-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discovery
  namespace: microservices
spec:
  selector:
    app: discovery
  ports:
    - name: http
      port: 8081
      targetPort: 8081
