k8s/base/log-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log
  namespace: microservices
spec:
  selector:
    app: log
  ports:
    - name: http
      port: 8082
      targetPort: 8082
